--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <table class="table">
                 <thead>
                     <tr>
-                        <th colspan="2">Base Specs</th>
+                        <th colspan="2" style="color: rgb(255,255,255);">Base Specs</th>
                     </tr>
                 </thead>
                 <tbody>
